Scale perspective so cube is not distorted while zooming. Also prevents zooming inside the cube.

--- a/style.css
+++ b/style.css
@@ -20,11 +20,11 @@ body {
 .viewport {
   display: table-cell;
   vertical-align: middle;
-  -webkit-perspective: 800px;
-  -moz-perspective: 800px;
-  -ms-perspective: 800px;
-  -o-perspective: 800px;
-  perspective: 800px;
+  -webkit-perspective: 1000px;
+  -moz-perspective: 1000px;
+  -ms-perspective: 1000px;
+  -o-perspective: 1000px;
+  perspective: 1000px;
   }
 
 .cube {
